syntax = "proto3";
package contactpb;

option go_package = "./contactpb";

service ContactService {
  rpc Submit(ContactRequest) returns (ContactResponse);
}

message ContactRequest {
  string name = 1;
  string email = 2;
  string message = 3;
  string turnstile_token = 4;
  string remote_ip = 5;
}

message ContactResponse {
  string status = 1;
}
